# Wineget

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  build.sh
.github/workflow/: ubuntu20.yml
.github/workflows/: rust.yml  ubuntu20.yml  ubuntu22.yml
.rpm/: wineget.spec
src/: clone.rs  installer.rs  main.rs  open.rs  parser.rs  repo.rs  search.rs
