[package]
name = "wineget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sargparse = "0.2.2"
reqwest = "0.11.11"
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
git2 = "0.15.0"
dirs = "4.0.0"