[package]
name = "wineget"
version = "1.2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Windows-On-Linux/Wineget"
license = "LICENSE"
description = "Wineget(WNG) is a package manager for Wine written with Rust"
authors = ["Andrea055"]
homepage = "https://github.com/Windows-On-Linux/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sargparse = "0.2.2"
reqwest = "0.11.11"
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
git2 = "0.15.0"
dirs = "4.0.0"

[package.metadata.rpm]
package = "wineget"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
wineget = { path = "/usr/bin/wineget" }
